force-app/main/default/objects/Seal__c/Seal__c.object-meta.xml
<CustomObject>
    <label>Seal</label>
    <nameField>
        <displayFormat>S-{00000}</displayFormat>
        <label>Seal Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Seals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>