force-app/main/default/objects/Seal__c/fields/Content_Document_Id__c.field-meta.xml
<CustomField>
    <fullName>Content_Document_Id__c</fullName>
    <externalId>true</externalId>
    <label>Content Document Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>