force-app/main/default/objects/Seal__c/fields/Content_Document_Name__c.field-meta.xml
<CustomField>
    <fullName>Content_Document_Name__c</fullName>
    <label>Content Document Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>