force-app/main/default/objects/Seal__c/fields/Hash__c.field-meta.xml
<CustomField>
    <fullName>Hash__c</fullName>
    <label>Hash</label>
    <length>255</length>
    <type>Text</type>
</CustomField>