force-app/main/default/objects/Seal__c/fields/Link__c.field-meta.xml
<CustomField>
    <fullName>Link__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/r/ContentDocument/&quot;&amp; Content_Document_Id__c &amp;&quot;/view&quot;, &quot;View &quot;&amp; Content_Document_Name__c )</formula>
    <label>Link</label>
    <type>Text</type>
</CustomField>